--- a/frontend/src/app/features/dashboard/doctor/components/clinical-test-result/clinical-test-result.component.html
+++ b/frontend/src/app/features/dashboard/doctor/components/clinical-test-result/clinical-test-result.component.html
@@ -1,4 +1,4 @@
-<div class="min-h-screen bg-neutral-50">
+<div class="bg-neutral-50">
   <div class="container max-w-5xl mx-auto px-6 py-8">
     @if (result(); as res) {
     <div class="bg-white rounded-2xl shadow-sm border border-neutral-200 overflow-hidden">
