--- a/frontend/src/app/core/components/not-found/not-found.component.html
+++ b/frontend/src/app/core/components/not-found/not-found.component.html
@@ -1,5 +1,5 @@
 <main
-  class="flex min-h-screen w-full items-center justify-center bg-gray-100 p-4"
+  class="flex h-screen w-full items-center justify-center bg-neutral-50 p-4"
 >
   <div class="w-full max-w-lg text-center">
     <h1 class="text-9xl font-extrabold tracking-tight text-primary">404</h1>
